Ajuste de texto

--- a/primeiro-meetup/index.html
+++ b/primeiro-meetup/index.html
@@ -80,7 +80,7 @@
 
 <p><strong>Local</strong>: iG,  Avenida das Nações Unidas, 11633 - Térreo - Brooklin - CEP: 04795-100, SP. Entrada pela rua Guararapes, n˚ 2064, recepção do iG, veja no <a href="https://goo.gl/maps/RBPTl">Google Maps</a>.</p>
 
-<p><em>Obs.: O primeiro meetup será apenas para convidados, pois queremos testar experimentar a estrutura do meetup antes de abrirmos par ao publico, porém todo o conteúdo será disponibilizado aqui no blog.</em></p>
+<p><em>Obs.: O primeiro meetup será apenas para convidados, pois queremos testar e experimentar a estrutura do meetup antes de abrirmos par ao publico, porém todo o conteúdo será disponibilizado aqui no blog.</em></p>
 
     </div>
     <div class="feat share">
