--- a/primeiro-meetup/index.html
+++ b/primeiro-meetup/index.html
@@ -70,7 +70,7 @@
     <div itemprop="articleBody">
       <p>Finalmente o primeiro meetup. \o/</p>
 
-<p>O tema a ser discutido será <strong>Style Guide</strong>, foram escolhidos dois profissionais da área para iniciar a discussão, <a href="https://www.facebook.com/gmoura.dev">Guilherme Moura</a>, Desenvolvedor Front-end e <a href="https://www.facebook.com/escopob">Bárbara Araújo</a>, Arquiteta de Informação ambos trabalham no portal de noticias super conhecido, o <a href="http://ig.com.br">iG</a>.</p>
+<p>O tema a ser discutido será <strong>Style Guide</strong>, foram escolhidos dois profissionais da área para iniciar a discussão, <a href="https://www.facebook.com/gmoura.dev">Guilherme Moura</a>, Desenvolvedor Front-end e <a href="https://www.facebook.com/escopob">Bárbara Araújo</a>, Arquiteta de Informação ambos trabalham no portal de notícias super conhecido, o <a href="http://ig.com.br">iG</a>.</p>
 
 <h2 id="horrio-e-local">Horário e local</h2>
 
@@ -80,7 +80,7 @@
 
 <p><strong>Local</strong>: iG,  Avenida das Nações Unidas, 11633 - Térreo - Brooklin - CEP: 04795-100, SP. Entrada pela rua Guararapes, n˚ 2064, recepção do iG, veja no <a href="https://goo.gl/maps/RBPTl">Google Maps</a>.</p>
 
-<p><em>Obs.: O primeiro meetup será apenas para convidados, pois queremos testar e experimentar a estrutura do meetup antes de abrirmos par ao publico, porém todo o conteúdo será disponibilizado aqui no blog.</em></p>
+<p><em>Obs.: O primeiro meetup será apenas para convidados, pois queremos testar e experimentar a estrutura do meetup antes de abrirmos para o público, porém todo o conteúdo será disponibilizado aqui no blog.</em></p>
 
     </div>
     <div class="feat share">
@@ -111,7 +111,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-47727049-1', 'fronux.com');
+        ga('create', 'UA-62674375-1', 'fronux.com');
         ga('send', 'pageview');
       </script>
     
