--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </figure>
       <div class="bio">
           <h1>FrontUx.</h1>
-          <p>Meetup para reunir Designers e Developers e discutir assuntos para melhor o flow de trabalho de ambas as áreas</p>
+          <p>Meetup para reunir Designers e Developers e discutir assuntos para melhorar o fluxo de trabalho de ambas as áreas</p>
       </div>
       <nav>
         <h6>On</h6>
