Abortado o primeiro meetup

--- a/primeiro-meetup/index.html
+++ b/primeiro-meetup/index.html
@@ -68,19 +68,7 @@
     </div>
     <h1 class="page-title" itemprop="name headline">Meetup #1</h1>
     <div itemprop="articleBody">
-      <p>Finalmente o primeiro meetup. \o/</p>
-
-<p>O tema a ser discutido será <strong>Style Guide</strong>, foram escolhidos dois profissionais da área para iniciar a discussão, <a href="https://www.facebook.com/gmoura.dev">Guilherme Moura</a>, Desenvolvedor Front-end e <a href="https://www.facebook.com/escopob">Bárbara Araújo</a>, Arquiteta de Informação ambos trabalham no portal de notícias super conhecido, o <a href="http://ig.com.br">iG</a>.</p>
-
-<h2 id="horrio-e-local">Horário e local</h2>
-
-<p><strong>Data</strong>: 15/05/2015.</p>
-
-<p><strong>Horário</strong>: 19 horas as 21:30.</p>
-
-<p><strong>Local</strong>: iG,  Avenida das Nações Unidas, 11633 - Térreo - Brooklin - CEP: 04795-100, SP. Entrada pela rua Guararapes, n˚ 2064, recepção do iG, veja no <a href="https://goo.gl/maps/RBPTl">Google Maps</a>.</p>
-
-<p><em>Obs.: O primeiro meetup será apenas para convidados, pois queremos testar e experimentar a estrutura do meetup antes de abrirmos para o público, porém todo o conteúdo será disponibilizado aqui no blog.</em></p>
+      <p>Em breve … </p>
 
     </div>
     <div class="feat share">
