--- a/primeiro-meetup/index.html
+++ b/primeiro-meetup/index.html
@@ -4,11 +4,11 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-      <title>FrontUx - Meet'up - Designer end Developers</title>
+      <title>FrontUx - Meet'up - Designers end Developers</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta http-equiv="content-language" content="en-gb" />
-      <meta name="description" content="Meet'up - Designer end Developers">
+      <meta name="description" content="Meet'up - Designers end Developers">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="/css/main.css" />
